--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/SalesReportView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/SalesReportView.xaml
@@ -7,6 +7,7 @@
              xmlns:viewmodel="clr-namespace:HMQL_Project01_QuanLyBanHang.MVVM.ViewModel"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:fa="http://schemas.fontawesome.io/icons/"
              mc:Ignorable="d"
              d:DesignHeight="544" d:DesignWidth="776">
     <UserControl.DataContext>
@@ -195,8 +196,7 @@
                                             CornerRadius="6"
                                             Cursor="Hand"
                                             Margin="8 0 0 0">
-                                        <Image Height="16" Width="16"
-                                               Source="../../Images/OrderManagementSVG/magnifying-glass-solid.png" />
+                                        <fa:ImageAwesome Icon="Search" Width="14" Height="14" Foreground="White"/>
                                         <Border.InputBindings>
                                             <MouseBinding MouseAction="LeftClick" Command="{Binding UpdatePagingCommand}" />
                                         </Border.InputBindings>
