--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/Themes/MenuButtonTheme.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/Themes/MenuButtonTheme.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:fa="http://schemas.fontawesome.io/icons/">
     <Style BasedOn="{StaticResource {x:Type ToggleButton}}"
            TargetType="{x:Type RadioButton}"
            x:Key="MenuButtonTheme">
@@ -12,17 +13,20 @@
                                 Background="{TemplateBinding Background}"
                                 CornerRadius="0 12 12 0"
                                 Margin="0 0 4 0">
-                            <Grid>
+                            <StackPanel Orientation="Horizontal">
+                                <!--<fa:ImageAwesome Icon="{TemplateBinding Content}" Width="16" Height="16" Foreground="Black" Margin="16 0 8 0"/>-->
+                                <TextBlock fa:Awesome.Content="Home"/>
                                 <TextBlock Text="{TemplateBinding Content}"
                                        Foreground="Black"
-                                       VerticalAlignment="Center" Margin="16 0 0 0">
+                                       VerticalAlignment="Center"
+                                       FontWeight="DemiBold"
+                                       Name="MenuText">
                                 </TextBlock>
-                            </Grid>
+                            </StackPanel>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="0"/>
         </Style.Setters>
