--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderCreateView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderCreateView.xaml
@@ -452,9 +452,8 @@
                                     </Rectangle.OpacityMask>
                                 </Rectangle>
                             </Canvas>
-                            <TextBox Name="TextBox" Width="100"
-                               Text="25-04-2023"
-                               FontSize="16" FontWeight="DemiBold"
+                            <TextBlock Text="{Binding DeliDate}"
+                               FontSize="18" FontWeight="DemiBold"
                                Margin="0 12 0 0" DockPanel.Dock="Top"/>
                             <TextBlock Text="Deliver Date"
                                FontSize="12" FontWeight="SemiBold" Foreground="#788B9A"
@@ -511,7 +510,7 @@
                                 </Rectangle>
                             </Canvas>
 
-                            <TextBlock Text="{Binding OrderD.order.totalPrice}"
+                            <TextBlock Text="{Binding TotalPrice}"
                                FontSize="18" FontWeight="DemiBold"
                                Margin="0 12 0 0" DockPanel.Dock="Top"/>
                             <TextBlock Text="Payment (VND)"
