--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderDetailView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderDetailView.xaml
@@ -371,7 +371,7 @@
                                 </Rectangle>
                             </Canvas>
 
-                            <TextBlock Text="{Binding OrderD.order.date}"
+                            <TextBlock Text="{Binding DeliDate}"
                                FontSize="18" FontWeight="DemiBold"
                                Margin="0 12 0 0" DockPanel.Dock="Top"/>
                             <TextBlock Text="Deliver Date"
@@ -428,7 +428,7 @@
                                 </Rectangle>
                             </Canvas>
 
-                            <TextBlock Text="{Binding OrderD.order.totalPrice}"
+                            <TextBlock Text="{Binding TotalPrice}"
                                FontSize="18" FontWeight="DemiBold"
                                Margin="0 12 0 0" DockPanel.Dock="Top"/>
                             <TextBlock Text="Payment (VND)"
