Update Icon And Password Box

--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/LoginView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/LoginView.xaml
@@ -98,6 +98,7 @@
                                                 <Grid>
                                                     <Rectangle StrokeThickness="1"/>
                                                     <TextBox Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}"
+                                                             FontFamily="../../Fonts/password.ttf#Password"
                                                              FontSize="12" Margin="1" 
                                                              BorderThickness="0" Background="Transparent"
                                                              VerticalContentAlignment="Center" Foreground="Black" x:Name="InputField"/>
