--- a/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderDetailView.xaml
+++ b/HMQL_Project01_QuanLyBanHang/HMQL_Project01_QuanLyBanHang/MVVM/View/OrderDetailView.xaml
@@ -400,12 +400,13 @@
                                 </Rectangle>
                             </Canvas>
 
-                            <TextBlock Text="10 Books"
+                            <TextBlock Text="{Binding BookQuantity, StringFormat={}{0} Books}"
                                FontSize="18" FontWeight="DemiBold"
                                Margin="0 12 0 0" DockPanel.Dock="Top"/>
-                            <TextBlock Text="Number Of Items"
+                            <TextBlock Text="Quantity Order"
                                FontSize="12" FontWeight="SemiBold" Foreground="#788B9A"
-                               Margin="0 0 0 0" DockPanel.Dock="Bottom"/> </DockPanel>
+                               Margin="0 0 0 0" DockPanel.Dock="Bottom"/>
+                        </DockPanel>
                     </Border>
                     <!--Total Price-->
                     <Border Height="100"     
